# csv-ruler

./: .gitignore  .pre-commit-config.yaml  flake.nix  pyproject.toml
.direnv/: flake-profile-4-link
app/: main.py
