[project]
name = "csv-ruler"
version = "0.1.0"
dependencies = [
    "fastapi",
]
requires-python = ">=3.8"
authors = [
    { name = "Jahn16", email = "jpdeoliveiraferreira@gmail.com" },
]
description = "Transform csv files based on custom rules"
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
]

[project.optional-dependencies]
dev = [
    "pspm",
    "fastapi[standard]",
]

[tool.ruff]
preview = true
line-length = 79

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "CPY",
    "COM812",
    "D1",
]
extend-safe-fixes = [
    "FA102",
]
exclude = [
    "tests/*",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = false

[tool.mypy]
strict = true
